# option-princing-with-mmcc-algorithm

./: .gitignore  LICENSE  README.md  create_venv.sh  pyproject.toml  requirements.txt
results/: multi_seed_results.csv
scripts/: run_experiment.py
src/mmcc_hedging/: __init__.py  hedging.py  heston.py  mmcc.py  network.py  params.py  visualization.py  visualization_2.py
tests/: test_smoke.py
